# pore-c-py

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  LICENSE.txt  Makefile  README.md  README.rst  barcodes.pretend  conda-linux-64.lock.yml  conda-lock.yml  environment.yml  hatch.toml  pyproject.toml  release-environment.yml  requirements.txt  setup.cfg  setup.py  tox.ini
conda/: dev-environment.yml  dev-linux-64.conda-lock.yml  meta.yaml
docs/: conf.py  index.rst
pore_c_py/: __init__.py  align_tools.py  aligns.py  annotate.py  digest.py  digests.py  io.py  log.py  main.py  model.py  monomers.py  settings.py  testing.py  utils.py  writers.py
pore_c_py/tests/: conftest.py  test_align.py  test_align_tools.py  test_annotate.py  test_digest.py  test_io.py  test_main.py  test_model.py  test_monomers.py  test_tags.py  test_testing.py  test_utils.py  test_writers.py
porecpy/: __init__.py  aligns.py  index.py  io.py  main.py  model.py  monomers.py  sam_utils.py  settings.py  testing.py
porecpy/tests/: conftest.py  test_align.py  test_io.py  test_main.py  test_model.py  test_monomers.py  test_tags.py  test_testing.py
src/pore_c2/: __init__.py  aligns.py  cli.py  digest.py  index.py  io.py  log.py  map.py  model.py  monomers.py  multiprocessing.py  overlaps.py  reads.py  sam_tags.py  sam_utils.py  settings.py  testing.py  utils.py  variants.py
src/pore_c2/io/: __init__.py  aligns.py  reads.py
tests/: conftest.py  test_align.py  test_align_tools.py  test_annotate.py  test_cli.py  test_digest.py  test_io.py  test_map.py  test_model.py  test_monomers.py  test_overlap.py  test_tags.py  test_testing.py  test_utils.py  test_writers.py
tests/workflow/: Snakefile  pytest.ini  test_check_results.py  test_snakemake.yaml
tests/workflow/envs/: minimap2.yml  pairtools.yml
