[build-system]
requires = ["hatchling", "hatch-requirements-txt", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pore-c2"
version = "0.7.2rc1"
description = ""
authors = [
  { name = "Eoghan Harrington", email = "eoghan.harrington@nanoporetech.com" },
]
dependencies = [
    "biopython~=1.79",
    "polars~=0.13.62",
    "pyarrow~=10.0.0",
    "pysam>=0.20.0",
    "typer~=0.6.1",
]
requires-python = ">=3.8"
license = { text = "MIT" }

[project.optional-dependencies]

[project.scripts]
pore-c2 = "pore_c2.cli:app"


[tool.conda-lock]
platforms = [
  # 'osx-arm64',  uncomment this if bioconda ever adds support
  # 'osx-64',
  'linux-64'
]
channels = ['conda-forge', 'bioconda', 'defaults']

[tool.conda-lock.dependencies]
minimap2 = ">=2.24"
pairtools = ">=1.0.1"
cooler = ">0.8.0"
samtools = "*"
whatshap = ">=1.6"
hapcut2 = "~=1.3.3"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.7.2rc1"
version_files = ["pyproject.toml:version"]
#update_changelog_on_bump = true


[tool.pytest.ini_options]
addopts = "-p no:pytest-workflow"
testpaths = ['tests']
norecursedirs = ["dist", "build", ".tox", "scratch*", ".cache", ".venv", "tests/workflow"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]
looponfailroots = ["tests", "src"]

[tool.isort]
profile = "black"
known_first_party = "aws_interfacing"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "scratch"]
venvPath = "./."
venv = ".venv"
extraPaths = ["./.venv"]
reportMissingImports = true
reportMissingTypeStubs = false


[tool.mypy]
files = ["src"]
show_error_codes = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.coverage.paths]
source = ["src/pore_c2"]

[tool.coverage.run]
branch = true
source = ["pore_c2"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
]
